Update environment configuration and deployment documentation
- Changed APP_URL in .env.example to use production URL
- Added DB_URL and DATABASE_URL placeholders in .env.example
- Updated .gitignore to exclude the /dist directory
- Added Railway deployment guide in docs/RAILWAY_DEPLOYMENT.md
- Enhanced cPanel deployment guide with optional packaging script
- Modified database.php to use DATABASE_URL for database connections
- Added cpanel-package.ps1 script for creating deployment package
- Added error handling and directory management in cpanel-package.ps1
- Included new error images for better debugging

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://your-app.up.railway.app
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -23,10 +23,12 @@ LOG_LEVEL=info
 LOG_DAILY_DAYS=14
 
 DB_CONNECTION=mysql
+DB_URL=
+DATABASE_URL=
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=walkin_app
-DB_USERNAME=root
+DB_DATABASE=walkin
+DB_USERNAME=walkin
 DB_PASSWORD=
 
 SESSION_DRIVER=database
